--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>博客</title><link href=./static/css/app.4f53d5a50648d99f2f7a468bfe4df2b7.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.88cbf33bf3d9af3b3755.js></script><script type=text/javascript src=./static/js/app.8ba0561486c0c3340c8f.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>博客</title><script>(function (doc, win) {
+            var docEle = doc.documentElement,
+                resizeEvent = 'orientationchange' in window ? 'orientationchange' : 'resize';
+            var recalCulate = function(){
+                var width = docEle.clientWidth;
+                docEle.style.fontSize = 100 * (width / 1920) + 'px';
+            };
+            recalCulate()
+            if (!doc.addEventListener) return;
+            win.addEventListener(resizeEvent, recalCulate, false);
+        })(document, window);</script><link href=./static/css/app.831fc7bcac64b36c60e84ff8b586319a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.88cbf33bf3d9af3b3755.js></script><script type=text/javascript src=./static/js/app.786451c389bdb4b5a026.js></script></body></html>
